--- a/Position Calculator/Position Calculator.csproj
+++ b/Position Calculator/Position Calculator.csproj
@@ -7,4 +7,17 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="logo.ico" />
+      <Resource Include="logo.ico" />
+      <None Remove="BWtheme.png" />
+      <Resource Include="BWtheme.png">
+        <DependentUpon>App.xaml</DependentUpon>
+      </Resource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Binance.Net" Version="8.0.0-alpha2" />
+    </ItemGroup>
+
 </Project>
